css/main.css
body,
html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

* {
    cursor: url("../images/rocket.png"), auto;
}

#particles-js {
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: #000000;
    z-index: 15;
}

#preloader {
    width: 100% !important;
    height: 100% !important;
    top: 0 !important;
    left: 0 !important;
    overflow: hidden !important;
    background: white !important;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1005;
}

svg {
    top: 0;
    left: 0;
    width: 100% !important;
    height: 100% !important;
}

.ml1 {
    font-weight: 900;
    font-size: 2.5em;
}

.letters {
    color: #26292D;
}

.ml1 .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
}

.ml1 .line {
    opacity: 0;
    position: absolute;
    left: 0;
    height: 3px;
    width: 100%;
    background-color: #26292D;
    transform-origin: 0 0;
}

.ml1 .line1 {
    top: 0;
}

.ml1 .line2 {
    bottom: 0;
}

.menu {
    position: fixed;
    top: 20px;
    left: 20px;
    height: 46px;
    width: 46px;
    z-index: 1003;
}

.menu-circle {
    background-color: #fff;
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 50%;
    transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
    z-index: 1000;
}

.menu:hover .menu-circle {
    transform: scale(1.4);
}

.menu.open .menu-circle {
    transform: scale(5);
}

.menu-link {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 1002;
}

.menu-icon {
    position: absolute;
    width: 20px;
    height: 14px;
    margin: auto;
    left: 0;
    top: 0;
    right: 0;
    bottom: 1px;
}

.menu-line {
    background-color: #333;
    height: 2px;
    width: 100%;
    border-radius: 2px;
    position: absolute;
    left: 0;
    transition: all 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.menu-line-1 {
    top: 0;
}

.menu-line-2 {
    top: 0;
    bottom: 0;
    margin: auto;
}

.menu-line-3 {
    bottom: 0;
}

.menu.open .menu-line-1 {
    transform: translateY(7px) translateY(-50%) rotate(-135deg);
}

.menu.open .menu-line-2 {
    opacity: 0;
}

.menu.open .menu-line-3 {
    transform: translateY(-7px) translateY(50%) rotate(135deg);
}

.menu-overlay {
    background-color: #fff;
    color: #333;
    height: 100%;
    width: 100%;
    position: fixed;
    opacity: 0;
    visibility: hidden;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: opacity 0.2s ease-in-out;
    z-index: 1001;
}

.menu-overlay.open {
    opacity: 1;
    visibility: visible;
    transition-delay: 0.03s;
}

.menu-overlay a {
    font-size: 2.5rem;
    color: grey;
    font-weight: bold;
    position: relative;
    padding: 10px !important;
    border-color: white;
    border-style: solid;
}

.menu-overlay a:hover {
    color: white;
}

.menu-overlay a::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: scaleY(0);
    transform-origin: bottom center;
    background: black;
    z-index: -1;
    transition: transform 0.3s;
}

.menu-overlay a:hover::after {
    transform: scaleY(1);
    color: white;
}

.menu-overlay .active {
    background: white;
    color: black;
}

.active:hover {
    color: black !important;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background: #5E6366;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: #212121;
}

.team-members {
    position: relative;
    z-index: 15;
}

section {
    padding-top: 70px;
    padding-bottom: 70px;
    height: 1024px;
    background: black !important;
}

.section-heading {
    position: relative;
    color: white !important;
    z-index: 16 !important;
}

.section-heading-underline {
    position: relative;
    width: 40px;
    height: 25px;
    z-index: 16;
    object-fit: cover;
    margin-bottom: 50px;
}

.fixed-overlay {
    top: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 15;
}

#demoimage {
    border-radius: 25%;
    object-fit: cover;
    filter: grayscale(100%) opacity(0.7);
}

.text-v-center {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.team-image {
    margin-bottom: 20px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: white !important;
}

